# chat-distill

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 882f4f94c3b8_initial.py  a1b2c3d4e5f6_add_user_chats.py
src/backend/: Dockerfile  server.py
src/backend/api/routes/: client.py  messages.py
src/backend/core/: logging.py
src/backend/core/dependencies/: auth.py  storages_di.py  telegram_auth.py
src/backend/core/factories/: pipeline_factory.py
src/backend/core/pipelines/: merge_topics_pipeline.py  process_chat_block_pipeline.py  process_message_pipeline.py  split_topics_pipeline.py
src/backend/db/: __init__.py  session.py
src/backend/db/models/: __init__.py  chat_buffer.py  chats.py  message_embeddings.py  messages.py  topic_messages.py  topics.py  user_chats.py  users.py
src/backend/queue/: celery_app.py  tasks.py
src/bot/: Dockerfile  app.py
src/bot/clients/: backend.py  telegram.py
src/bot/handlers/: __init__.py  groups.py  private.py
src/bot/mappers/: message_mapper.py
src/bot/schemas/: messages.py
src/bot/utils/: logging.py
src/config/: backend_settings.py  base.py  bot_settings.py  llm_settings.py
src/llm/clients/: base_embedding.py  base_llm.py  embedding_client.py  llm_client.py
src/llm/prompts/: __init__.py
src/llm/results/: base.py
src/llm/runner/: embedding_runner.py  llm_runner.py
tests/: conftest.py  test_pipeline.py  test_split_pipeline.py  test_summarization_service.py
(+42 files in other folders)
