[project]
name = "telegram-summarization-bot"
version = "1.0.0"
description = "Telegram group message analysis: real-time topic detection and summarization using a local LLM and vector similarity search"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
